# Zcritical

./: .gitattributes  .gitignore  CHANGELOG.md  CONTINUATION_GUIDE.md  DEBUG_PLAN.md  ENGINE_SOUND_REDESIGN.md  README.md  firmware.json  temp_keystore_b64.txt
.github/workflows/: firmware-release.yml  multi-platform-build.yml
.kiro/hooks/: appstate-sync-reminder.kiro.hook  architecture-boundary-guard.kiro.hook  auto-build-esp.kiro.hook  auto-context-load.kiro.hook  chinese-commit-msg.kiro.hook  cold-start-context-load.kiro.hook  esp-build-feedback.kiro.hook  hardware-config-sync.kiro.hook  new-file-registration.kiro.hook  project-hygiene-check.kiro.hook  protocol-sync-check.kiro.hook  session-handoff-update.kiro.hook
.kiro/reference/: AI-COLLAB-OS-BLUEPRINT.md  SOFTWARE-STRATEGY.md
.kiro/steering/: SOFTWARE-STRATEGY.md  START-HERE.md  brand-rules.md  build-environment.md  commit-convention.md  engineering-standards.md  git-and-release.md  platform-rules.md  professional-development-methodology.md  release-playbook.md  terminal-safety.md
RideWind/: APP_DEBUG_LOG_GUIDE.md  BLACK_SCREEN_FIX.md  BLUETOOTH_ARCHITECTURE.md  BLUETOOTH_CHECKLIST.md  DEVELOPER_MODE.md  HARDWARE_INTEGRATION_GUIDE.md  HARDWARE_LED_COLOR_ANALYSIS.md  KNOB_USAGE_EXAMPLE.md  LOGO_ACK9_BUG_FIX.md  LOGO_ACK9_QUICK_FIX.md  LOGO_CONVERSION_BREAKTHROUGH.md  LOGO_UPLOAD_GUIDE.md  PROTOCOL_SPECIFICATION.md  README.md  RUNNING_MODE_TEST.md  SMOOTH_CONTROL_PROPOSAL.md  app_version.json  pubspec.yaml
RideWind/android/: build.gradle.kts
RideWind/assets/: firmware.json
RideWind/docs/: FULL_TEST_CHECKLIST.md  GARAGE_SYSTEM_DESIGN.md  IOS_BUILD_AUTOMATION.md  IOS_RELEASE_CHECKLIST.md  PLATFORM_ONBOARDING_TEMPLATE.md  REFACTOR_DESIGN.md  app-interaction-guide.md
RideWind/lib/: main.dart
ridewind-esp/: CMakeLists.txt  build.ps1  flash.ps1  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  引脚文档配置.md
ridewind-esp/main/: CMakeLists.txt  idf_component.yml  main.c
ridewind-esp/main/app/: app_state.c  app_state.h  encoder_handler.c  encoder_handler.h  led_effects.c  led_effects.h  selftest.c  selftest.h
ridewind-esp/main/config/: board_config.h  pin_config.h  preset_colors.h
ridewind-esp/main/drivers/: drv_audio.c  drv_audio.h  drv_encoder.c  drv_encoder.h  drv_gpio.c  drv_gpio.h  drv_lcd.c  drv_lcd.h  drv_led.c  drv_led.h  drv_pwm.c  drv_pwm.h  drv_treadmill.c  drv_treadmill.h
ridewind-esp/main/resources/: VOI.c  boot_logo_240.c  boot_logo_240.h  colored_digits.c  colored_digits.h  default_logo.h  engine_high.h  engine_idle.h  engine_knock.h  engine_layers_16bit.h  engine_low.h  engine_mid.h  engine_rev.h  engine_test_16bit.h  fengsu_68_58.c  font_8x16.h  logotubiao.c  menu_icons.c  menu_icons.h  new_color.c  rgbtubiao.c  speed_99_33.c  tiaosepan_74_74.c  treadmill_icon.c  ui_images.c  ui_images.h  voicetubiao.c
ridewind-esp/main/resources/audio_raw/: engine_layer_0.pcm  engine_layer_1.pcm  engine_layer_2.pcm  engine_layer_3.pcm  engine_layer_4.pcm
ridewind-esp/main/services/: a2dp_service.c  a2dp_service.h  audio_engine.c  audio_engine.h  audio_player.c  audio_player.h  ble_service.c  ble_service.h  ota_service.c  ota_service.h  protocol.c  protocol.h  storage.c  storage.h  treadmill_service.c  treadmill_service.h  wifi_audio_service.c  wifi_audio_service.h  wifi_comm_service.c  wifi_comm_service.h
ridewind-esp/main/ui/: ui_bright.c  ui_bright.h  ui_common.c  ui_common.h  ui_digit_roller.c  ui_digit_roller.h  ui_logo.c  ui_logo.h  ui_manager.c  ui_manager.h  ui_menu.c  ui_menu.h  ui_preset.c  ui_preset.h  ui_rgb.c  ui_rgb.h  ui_speed.c  ui_speed.h  ui_treadmill.c  ui_treadmill.h  ui_volume.c  ui_volume.h
(+407 files in other folders)
